<resources>
    <string name="default_label">Custom FriendlyPix</string>
    <string name="app_name">AndroidTest</string>
    <string name="edit_message">Enter your name</string>
    <string name="button_send">Send</string>
    <string name="action_description_text">What do you do?</string>
    <string name="button_send_action">Perform Action</string>
    <string name="add_roll_button">Add another roll</string>
    <string name="welcome_screen_text">Welcome to the Firebase Example</string>
    <string name="sign_in_button_text">Sign in</string>
    <string name="explore_button_text">Explore</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_feed">FeedActivity</string>
    <string name="server_client_id">85010793512-5t8ejsijkp68vgudb9jn00ct1tnrgoac.apps.googleusercontent.com</string>
    <string name="server_widget_url">http://www.google.com</string>
    <string name="show_games_button">Go to Games</string>
    <string name="title_activity_game">My Games</string>

    <string name="title_activity_feeds">My Games</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_login">Sign in</string>

    <string name="add_player_button">Add Player</string>
    <string name="create_game_button">Create Game</string>
    <string name="create_game_prompt">Host a new game</string>

    <!-- Content Description for images -->
    <string name="desc_google_icon">Google Logo</string>
    <string name="server_client_id_web">85010793512-guh26t71dh519hp1il371it4bq4kil0h.apps.googleusercontent.com</string>
    <string name="title_activity_welcome">FriendlyPix</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="sign_out_button_text">sign out</string>
    <string name="show_feed_button_text">show feed</string>
    <string name="drawer_profile_title">Profile</string>
    <string name="drawer_settings_title">Settings</string>
    <string name="drawer_your_feed_title">Your Feed</string>
    <string name="title_activity_comments">CommentsActivity</string>
    <string name="title_activity_new_post">New Post</string>
    <string name="invite_friends_button_text">Invite your friends</string>
    <string name="my_posts_button_text">My posts</string>
    <string name="title_activity_user_detail">UserDetailActivity</string>
    <string name="follow_user_error">Unable to follow user.</string>
    <string name="picture_chooser_title">Select or take picture to post</string>
    <string name="new_comment_hint">Enter new comment</string>
    <string name="new_post_location_placeholder">Getting location...</string>
    <string name="user_info_no_name">Unknown user</string>
    <string name="error_required_field">Required</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_upload_task_create">Couldn\'t create upload task.</string>
    <string name="default_progress_message">Please wait…</string>
    <string name="profile_progress_message">Signing in…</string>
    <string name="post_upload_progress_message">Uploading…</string>
    <string name="user_logged_out_error">You must be logged in to do that.</string>
    <string name="error_user_not_signed_in">Error user not signed in.</string>
</resources>
