<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.sahko.androidtest.MainActivity">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:gravity="center|center_vertical"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp">

        <TextView
            android:id="@+id/textView2"
            style="@style/Base.TextAppearance.AppCompat.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_screen_text"
            android:textAlignment="center"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="144dp" />

        <Button
            android:id="@+id/sign_in_button"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:onClick="signIn"
            android:text="@string/sign_in_button_text" />

        <Button
            android:id="@+id/explore_button"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:onClick="anonymousSignIn"
            android:text="@string/explore_button_text" />


    </LinearLayout>

</android.support.constraint.ConstraintLayout>
